--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <!--RESUMO-->
   <div id="res" class="jresumo cima container-fluid text-center">
     <h1>RESUMO</h1>
-    <p class="lead">TENHO EM MIM TODOS OS SONHOS DO MUNDO.</p>
+    <p class="jlead lead">TENHO EM MIM TODOS OS SONHOS DO MUNDO.</p>
     <div class="jresdiv conteiner text-left">
       <div class="row">
         <!--Conteudo Mobile-->
