--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
   </nav>
   <!--HEADER-->
-  <div class="jheader containder-dark container-fluid text-center">
+  <div class="jheader container-dark container-fluid text-center">
     <h1 class="display-4">ANALISTA DE SISTEMAS</h1>
     <hr>
     <p class="lead">DESENVOLVER É DAR VIDA A IMAGINAÇÃO</p>
