--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
     </div>
   </nav>
   <!--HEADER-->
+  <div class="jbg fluid">
   <div class="jheader container-dark container-fluid text-center">
     <h1 class="display-4">ANALISTA DE SISTEMAS</h1>
     <hr>
     <p class="lead">DESENVOLVER É DAR VIDA A IMAGINAÇÃO</p>
   </div>
+</div>
   <!--RESUMO-->
   <div id="res" class="jresumo cima container-fluid text-center">
     <h1>RESUMO</h1>
