--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
   </nav>
   <!--HEADER-->
-  <div class="jbg fluid">
+  <div class="jbg">
   <div class="jheader container-dark container-fluid text-center">
     <h1 class="display-4">ANALISTA DE SISTEMAS</h1>
     <hr>
