--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
   <title>jo( );</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="main.js"></script>
+  <script src="carousel.js"></script>
   <link rel="stylesheet" href="bootstrap.min.css">
+  <link rel="stylesheet" href="infinite-slider.css">
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+  <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
 </head>
 
 <body>
@@ -93,6 +97,18 @@
      <h1> CERTIFICADOS</h1>
       “APRENDER É A ÚNICA COISA DE QUE A MENTE NUNCA SE CANSA, NUNCA TEM MEDO E NUNCA SE ARREPENDE “
       LEONADOR DA VINCI
+      <div class="container">
+        <section class="customer-logos slider">
+          <div class="slide"><img src="images/image1.png"></div>
+          <div class="slide"><img src="images/image2.png"></div>
+          <div class="slide"><img src="images/image3.png"></div>
+          <div class="slide"><img src="images/image4.png"></div>
+          <div class="slide"><img src="images/image5.png"></div>
+          <div class="slide"><img src="images/image6.png"></div>
+          <div class="slide"><img src="images/image7.png"></div>
+          <div class="slide"><img src="images/image8.png"></div>
+        </section>
+      </div>
   </div>
   <!--PROJETOS-->
   <div class="jprojetos cima container-fluid">
