--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <title>jo( );</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="main.js"></script>
-  <script src="carousel.js"></script>
   <link rel="stylesheet" href="bootstrap.min.css">
   <link rel="stylesheet" href="infinite-slider.css">
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
@@ -124,7 +123,8 @@
     RODAPE
   </div>
 
-  <!--bootstrap-->
+  <!--SCRIPT-->
+  <script src="carousel.js"></script>
   <script src="jquery-3.2.1.slim.min.js"></script>
   <script src="popper.min.js"></script>
   <script src="bootstrap.min.js"></script>
