--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="main.js"></script>
   <link rel="stylesheet" href="bootstrap.min.css">
-  <link rel="stylesheet" href="infinite-slider.css">
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-  <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
+  <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
 </head>
 
 <body>
@@ -44,12 +43,12 @@
   </nav>
   <!--HEADER-->
   <div class="jbg">
-  <div class="jheader container-dark container-fluid text-center">
-    <h1 class="display-4">ANALISTA DE SISTEMAS</h1>
-    <hr>
-    <p class="lead">DESENVOLVER É DAR VIDA A IMAGINAÇÃO</p>
+    <div class="jheader container-dark container-fluid text-center">
+      <h1 class="display-4">ANALISTA DE SISTEMAS</h1>
+      <hr>
+      <p class="lead">DESENVOLVER É DAR VIDA A IMAGINAÇÃO</p>
+    </div>
   </div>
-</div>
   <!--RESUMO-->
   <div id="res" class="jresumo cima container-fluid text-center">
     <h1>RESUMO</h1>
@@ -59,59 +58,56 @@
         <!--Conteudo Mobile-->
         <div class="d-block d-md-none ">
           <div class="col-12">
-              <img src="minhafoto.jpg" class="jfoto img-fluid" alt="Uma foto minha bem bonita.">
+            <img src="minhafoto.jpg" class="jfoto img-fluid" alt="Uma foto minha bem bonita.">
           </div>
           <div class="col-12 text-justify">
             <p> texto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla
-            blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blabla blatexto bla brgatexto bla blatexto bla
-            blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla bla
-          </p>
+              blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla
+              blabla blatexto bla brgatexto bla blatexto bla
+              blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla
+              bla
+            </p>
           </div>
         </div>
       </div>
       <!--Conteudo Desktop-->
-    <div class="d-none d-md-block">
-      <div class="row" >
-        <div class="col-1"></div>
+      <div class="d-none d-md-block">
+        <div class="row">
+          <div class="col-1"></div>
           <div class="col-6  text-justify">
             <p> texto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla
-              blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blabla blatexto bla blatexto bla blatexto bla
-              blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla bla
+              blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla
+              blabla blatexto bla blatexto bla blatexto bla
+              blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla
+              bla
             </p>
-            </div>
+          </div>
           <div class="col-4">
             <figure class="figure">
               <img src="minhafoto.jpg" class="figure-img img-fluid rounded" alt="Uma foto minha bem bonita.">
             </figure>
           </div>
-        <div class="col-1"></div>
+          <div class="col-1"></div>
         </div>
       </div>
     </div>
-    <button type="button" class="btn btn-lg btn-primary">Minha Historia      </button>
+    <button type="button" class="btn btn-lg btn-primary">Minha Historia </button>
   </div>
-  <div class="baixo container-fluid"><br></div> 
+  <div class="baixo container-fluid"><br></div>
   <!--CERTIFICADOS-->
   <div class="jcertificados container-fluid">
-     <h1> CERTIFICADOS</h1>
-      “APRENDER É A ÚNICA COISA DE QUE A MENTE NUNCA SE CANSA, NUNCA TEM MEDO E NUNCA SE ARREPENDE “
-      LEONADOR DA VINCI
-      <div class="container">
-        <section class="customer-logos slider">
-          <div class="slide"><img src="images/image1.png"></div>
-          <div class="slide"><img src="images/image2.png"></div>
-          <div class="slide"><img src="images/image3.png"></div>
-          <div class="slide"><img src="images/image4.png"></div>
-          <div class="slide"><img src="images/image5.png"></div>
-          <div class="slide"><img src="images/image6.png"></div>
-          <div class="slide"><img src="images/image7.png"></div>
-          <div class="slide"><img src="images/image8.png"></div>
-        </section>
-      </div>
+    <h1> CERTIFICADOS</h1>
+    “APRENDER É A ÚNICA COISA DE QUE A MENTE NUNCA SE CANSA, NUNCA TEM MEDO E NUNCA SE ARREPENDE “
+    LEONADOR DA VINCI
+    <div class="certficado-carousel">
+      <div>your content</div>
+      <div>your content</div>
+      <div>your content</div>
+    </div>
   </div>
   <!--PROJETOS-->
   <div class="jprojetos cima container-fluid">
- Projetos
+    Projetos
   </div>
   <div class="baixo container-fluid"><br></div>
   <!--CONTATOS-->
@@ -123,9 +119,10 @@
     RODAPE
   </div>
 
-  <!--SCRIPT-->
-  <script src="carousel.js"></script>
-  <script src="jquery-3.2.1.slim.min.js"></script>
+  <!--bootstrap-->
   <script src="popper.min.js"></script>
   <script src="bootstrap.min.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="slick/slick.min.js"></script>
 </body>
