--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <h1> CERTIFICADOS</h1>
     “APRENDER É A ÚNICA COISA DE QUE A MENTE NUNCA SE CANSA, NUNCA TEM MEDO E NUNCA SE ARREPENDE “
     LEONADOR DA VINCI
-    <div class="certficado-carousel">
+    <div class="certificado-carousel">
       <div>your content</div>
       <div>your content</div>
       <div>your content</div>
