--- a/index.html
+++ b/index.html
@@ -120,9 +120,8 @@
   </div>
 
   <!--bootstrap-->
+  <script src="jquery-3.2.1.slim.min.js"></script>
   <script src="popper.min.js"></script>
   <script src="bootstrap.min.js"></script>
-  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <script type="text/javascript" src="slick/slick.min.js"></script>
 </body>
