--- a/index.html
+++ b/index.html
@@ -123,5 +123,6 @@
   <script src="jquery-3.2.1.slim.min.js"></script>
   <script src="popper.min.js"></script>
   <script src="bootstrap.min.js"></script>
-  <script type="text/javascript" src="slick/slick.min.js"></script>
+  <script src="slick/slick.min.js"></script>
+  <script src="caroulsel.js"></script>
 </body>
