--- a/index.html
+++ b/index.html
@@ -124,5 +124,39 @@
   <script src="popper.min.js"></script>
   <script src="bootstrap.min.js"></script>
   <script src="slick/slick.min.js"></script>
-  <script src="caroulsel.js"></script>
+  <script>
+    
+$(document).ready(function () {
+  $('.certificado-carousel').slick({
+      slidesToShow: 3,
+      slidesToScroll: 1,
+      autoplay: true,
+      autoplaySpeed: 2000,
+      centerMode: true,
+      centerPadding: '60px',
+      slidesToShow: 3,
+      responsive: [
+          {
+              breakpoint: 768,
+              settings: {
+                  arrows: false,
+                  centerMode: true,
+                  centerPadding: '40px',
+                  slidesToShow: 3
+              }
+          },
+          {
+              breakpoint: 480,
+              settings: {
+                  arrows: false,
+                  centerMode: true,
+                  centerPadding: '40px',
+                  slidesToShow: 1
+              }
+          }
+      ]
+  });
+});
+
+  </script>
 </body>
