--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <script src="main.js"></script>
   <link rel="stylesheet" href="bootstrap.min.css">
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-  <link rel="stylesheet" type="text/css" href="slick/slick.css" />
-  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
+  <link rel="stylesheet" type="text/css" href="slick/slick/slick.css" />
+  <link rel="stylesheet" type="text/css" href="slick/slick/slick-theme.css" />
 </head>
 
 <body>
@@ -123,40 +123,6 @@
   <script src="jquery-3.2.1.slim.min.js"></script>
   <script src="popper.min.js"></script>
   <script src="bootstrap.min.js"></script>
-  <script src="slick/slick.min.js"></script>
-  <script>
-    
-$(document).ready(function () {
-  $('.certificado-carousel').slick({
-      slidesToShow: 3,
-      slidesToScroll: 1,
-      autoplay: true,
-      autoplaySpeed: 2000,
-      centerMode: true,
-      centerPadding: '60px',
-      slidesToShow: 3,
-      responsive: [
-          {
-              breakpoint: 768,
-              settings: {
-                  arrows: false,
-                  centerMode: true,
-                  centerPadding: '40px',
-                  slidesToShow: 3
-              }
-          },
-          {
-              breakpoint: 480,
-              settings: {
-                  arrows: false,
-                  centerMode: true,
-                  centerPadding: '40px',
-                  slidesToShow: 1
-              }
-          }
-      ]
-  });
-});
-
-  </script>
+  <script src="slick/slick/slick.min.js"></script>
+  <script src="carousel.js"></script>
 </body>
