--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <script src="main.js"></script>
   <link rel="stylesheet" href="bootstrap.min.css">
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-  <link rel="stylesheet" type="text/css" href="slick/slick/slick.css" />
-  <link rel="stylesheet" type="text/css" href="slick/slick/slick-theme.css" />
+  <link rel="stylesheet" type="text/css" href="./slick/slick/slick.css" />
+  <link rel="stylesheet" type="text/css" href="./slick/slick/slick-theme.css" />
 </head>
 
 <body>
@@ -99,11 +99,27 @@
     <h1> CERTIFICADOS</h1>
     “APRENDER É A ÚNICA COISA DE QUE A MENTE NUNCA SE CANSA, NUNCA TEM MEDO E NUNCA SE ARREPENDE “
     LEONADOR DA VINCI
-    <div class="certificado-carousel">
-      <div>your content</div>
-      <div>your content</div>
-      <div>your content</div>
+  </section>
+  <section class="autoplay responsive center  ">
+    <div>
+      <img src="http://placehold.it/350x300?text=1">
     </div>
+    <div>
+      <img src="http://placehold.it/350x300?text=2">
+    </div>
+    <div>
+      <img src="http://placehold.it/350x300?text=3">
+    </div>
+    <div>
+      <img src="http://placehold.it/350x300?text=4">
+    </div>
+    <div>
+      <img src="http://placehold.it/350x300?text=5">
+    </div>
+    <div>
+      <img src="http://placehold.it/350x300?text=6">
+    </div>
+  </section>
   </div>
   <!--PROJETOS-->
   <div class="jprojetos cima container-fluid">
