--- a/index.html
+++ b/index.html
@@ -99,27 +99,39 @@
     <h1> CERTIFICADOS</h1>
     “APRENDER É A ÚNICA COISA DE QUE A MENTE NUNCA SE CANSA, NUNCA TEM MEDO E NUNCA SE ARREPENDE “
     LEONADOR DA VINCI
-  </section>
-  <section class="autoplay responsive center  ">
-    <div>
-      <img src="http://placehold.it/350x300?text=1">
-    </div>
-    <div>
-      <img src="http://placehold.it/350x300?text=2">
-    </div>
-    <div>
-      <img src="http://placehold.it/350x300?text=3">
-    </div>
-    <div>
-      <img src="http://placehold.it/350x300?text=4">
-    </div>
-    <div>
-      <img src="http://placehold.it/350x300?text=5">
-    </div>
-    <div>
-      <img src="http://placehold.it/350x300?text=6">
-    </div>
-  </section>
+    </section>
+    <section class="jcert">
+      <div>
+        <img src="http://placehold.it/350x300?text=1">
+      </div>
+      <div>
+        <img src="http://placehold.it/350x300?text=2">
+      </div>
+      <div>
+        <img src="http://placehold.it/350x300?text=3">
+      </div>
+      <div>
+        <img src="http://placehold.it/350x300?text=4">
+      </div>
+      <div>
+        <img src="http://placehold.it/350x300?text=5">
+      </div>
+      <div>
+        <img src="http://placehold.it/350x300?text=6">
+      </div>
+      <div>
+        <img src="http://placehold.it/350x300?text=7">
+      </div>
+      <div>
+        <img src="http://placehold.it/350x300?text=8">
+      </div>
+      <div>
+        <img src="http://placehold.it/350x300?text=9">
+      </div>
+      <div>
+          <img src="http://placehold.it/350x300?text=10">
+        </div>
+    </section>
   </div>
   <!--PROJETOS-->
   <div class="jprojetos cima container-fluid">
