--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
   </div>
   <!--RESUMO-->
-  <div id="res" class="jresumo cima container-fluid text-center">
+  <div class="jresumo cima container-fluid text-center">
     <h1>RESUMO</h1>
     <p class="lead">TENHO EM MIM TODOS OS SONHOS DO MUNDO.</p>
     <div class="jresdiv conteiner text-left">
@@ -95,10 +95,11 @@
   </div>
   <div class="baixo container-fluid"><br></div>
   <!--CERTIFICADOS-->
-  <div class="jcertificados container-fluid">
+  <div class="jcertificados container-fluid text-center">
     <h1> CERTIFICADOS</h1>
-    “APRENDER É A ÚNICA COISA DE QUE A MENTE NUNCA SE CANSA, NUNCA TEM MEDO E NUNCA SE ARREPENDE “
-    LEONADOR DA VINCI
+    <p>“APRENDER É A ÚNICA COISA DE QUE A MENTE NUNCA SE CANSA, NUNCA TEM MEDO E NUNCA SE ARREPENDE “
+      LEONADOR DA VINCI
+    </p>
     </section>
     <section class="jcert">
       <div>
@@ -129,8 +130,8 @@
         <img src="http://placehold.it/350x300?text=9">
       </div>
       <div>
-          <img src="http://placehold.it/350x300?text=10">
-        </div>
+        <img src="http://placehold.it/350x300?text=10">
+      </div>
     </section>
   </div>
   <!--PROJETOS-->
