--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <!--NAV-->
-  <nav class="navbar baixo navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar baixo navbar-expand-lg navbar-dark gradiente bg-dark">
     <a class="navbar-brand" href="#">JOELSON FELIPE FIRMINO</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
       aria-expanded="false" aria-label="Toggle navigation">
@@ -91,13 +91,13 @@
         </div>
       </div>
     </div>
-    <button type="button" class="btn btn-lg btn-primary">Minha Historia </button>
+    <button type="button" class="gradiente btn btn-lg btn-primary">Minha Historia </button>
   </div>
   <div class="baixo container-fluid"><br></div>
   <!--CERTIFICADOS-->
-  <div class="jcertificados container-fluid text-center">
+  <div class="jcertificados gradiente container-fluid text-center">
     <h1> CERTIFICADOS</h1>
-    <p>“APRENDER É A ÚNICA COISA DE QUE A MENTE NUNCA SE CANSA, NUNCA TEM MEDO E NUNCA SE ARREPENDE “
+    <p class="lead">“APRENDER É A ÚNICA COISA DE QUE A MENTE NUNCA SE CANSA, NUNCA TEM MEDO E NUNCA SE ARREPENDE “
       LEONADOR DA VINCI
     </p>
     </section>
