--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>jo( );</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="main.js"></script>
-  <link rel="stylesheet" href="bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-  <link rel="stylesheet" type="text/css" href="./slick/slick/slick.css" />
-  <link rel="stylesheet" type="text/css" href="./slick/slick/slick-theme.css" />
+  <!-- JS-->
+  <script src="./js/main.js"></script>
+  <!-- CSS-->
+  <link rel="stylesheet" type="text/css" media="screen" href="./css/main.css" />
+  <!-- FRAMEWORK-->
+  <link rel="stylesheet" href="./framework/bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" href="./framework/slick/slick.css" />
+  <link rel="stylesheet" href="./framework/slick/slick-theme.css" />
 </head>
 
 <body>
@@ -58,7 +61,7 @@
         <!--Conteudo Mobile-->
         <div class="d-block d-md-none ">
           <div class="col-12">
-            <img src="minhafoto.jpg" class="jfoto img-fluid" alt="Uma foto minha bem bonita.">
+            <img src="./img/minhafoto.jpg" class="jfoto img-fluid" alt="Uma foto minha bem bonita.">
           </div>
           <div class="col-12 text-justify">
             <p> texto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla
@@ -84,14 +87,14 @@
           </div>
           <div class="col-4">
             <figure class="figure">
-              <img src="minhafoto.jpg" class="figure-img img-fluid rounded" alt="Uma foto minha bem bonita.">
+              <img src="./img/minhafoto.jpg" class="figure-img img-fluid rounded" alt="Uma foto minha bem bonita.">
             </figure>
           </div>
           <div class="col-1"></div>
         </div>
       </div>
     </div>
-    <button type="button" class="gradiente btn btn-lg btn-primary">Minha Historia </button>
+    <button type="button" class="gradiente btn btn-lg btn-primary bio">Minha Historia </button>
   </div>
   <div class="baixo container-fluid"><br></div>
   <!--CERTIFICADOS-->
@@ -103,34 +106,46 @@
     </section>
     <section class="jcert">
       <div>
-        <img src="http://placehold.it/350x300?text=1">
+        <!--HTML-->
+        <a href="https://www.sololearn.com/Certificate/1014-9145968/pdf/" target="_blank">
+          <img alt="Certificado HTML Fundamentals" src="./img/c-html.png">
+          <div class="sombra"> </div>
+        </a>
       </div>
       <div>
-        <img src="http://placehold.it/350x300?text=2">
+        <!--JAVASCRIPT -->
+        <a href="https://www.sololearn.com/Certificate/1024-9145968/pdf/" target="_blank">
+          <img alt="Certificado JavaScript Tutorial" src="./img/c-js.png">
+          <div class="sombra"> </div>
+        </a>
       </div>
       <div>
-        <img src="http://placehold.it/350x300?text=3">
+        <!--PHP -->
+        <a href="https://www.sololearn.com/Certificate/1059-9145968/pdf/" target="_blank">
+          <img alt="Certificado PHP Tutorial" src="./img/c-php.png">
+          <div class="sombra"> </div>
+        </a>
       </div>
       <div>
-        <img src="http://placehold.it/350x300?text=4">
+        <!--CSS -->
+        <a href="https://www.sololearn.com/Certificate/1023-9145968/pdf/" target="_blank">
+          <img alt="Certificado CSS Fundamentals" src="./img/c-css.png">
+          <div class="sombra"> </div>
+        </a>
       </div>
       <div>
-        <img src="http://placehold.it/350x300?text=5">
+        <!--SQL -->
+        <a href="https://www.sololearn.com/Certificate/1060-9145968/pdf/" target="_blank">
+          <img alt="Certificado SQL Fundamentals" src="./img/c-sql.png">
+          <div class="sombra"> </div>
+        </a>
       </div>
       <div>
-        <img src="http://placehold.it/350x300?text=6">
-      </div>
-      <div>
-        <img src="http://placehold.it/350x300?text=7">
-      </div>
-      <div>
-        <img src="http://placehold.it/350x300?text=8">
-      </div>
-      <div>
-        <img src="http://placehold.it/350x300?text=9">
-      </div>
-      <div>
-        <img src="http://placehold.it/350x300?text=10">
+        <!--RESPONSIVE WEB DESIGN -->
+        <a href="https://www.freecodecamp.org/certification/jff/responsive-web-design" target="_blank">
+          <img alt="Certificado Responsive Web Design" src="./img/c-wdr.png">
+          <div class="sombra"> </div>
+        </a>
       </div>
     </section>
   </div>
@@ -148,10 +163,11 @@
     RODAPE
   </div>
 
-  <!--bootstrap-->
-  <script src="jquery-3.2.1.slim.min.js"></script>
-  <script src="popper.min.js"></script>
-  <script src="bootstrap.min.js"></script>
-  <script src="slick/slick/slick.min.js"></script>
-  <script src="carousel.js"></script>
+  <!--FRAMEWORK-->
+  <script src="./framework/jquery/jquery-3.2.1.slim.min.js"></script>
+  <script src="./framework/popper/popper.min.js"></script>
+  <script src="./framework/bootstrap/bootstrap.min.js"></script>
+  <script src="./framework/slick/slick.min.js"></script>
+  <!-- SCRIPT-->
+  <script src="./js/carousel.js"></script>
 </body>
