--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <br>
     <h1> CERTIFICADOS</h1>
     <p class="lead">“APRENDER É A ÚNICA COISA DE QUE A MENTE NUNCA SE CANSA, NUNCA TEM MEDO E NUNCA SE ARREPENDE“
-      LEONADOR DA VINCI
+     <br> <em>LEONADOR DA VINCI</em>
     </p>
     </section>
     <section class="jcert">
@@ -169,11 +169,16 @@
   <!--PROJETOS-->
   <div class="jprojetos cima container-fluid">
     Projetos
+
+    <button type="button" class="gradiente btn btn-lg btn-primary bio">Mais Projetos </button>
   </div>
   <div class="baixo container-fluid"><br></div>
   <!--CONTATOS-->
   <div class="container-fluid">
+    
     CONTATOS
+
+    <button type="button" class="btn-light btn btn-lg  bio">Contatos </button>
   </div>
   <!--FOOTER-->
   <div class="cima container-fluid">
