shadow and navbar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
   <!--NAV-->
-  <nav class=" navbar baixo navbar-expand-lg navbar-dark gradiente bg-dark">
+  <nav class=" navbar baixo navbar-expand-lg navbar-dark gradiente bg-dark navbar-fixed-top">
     <a class="navbar-brand" href="#">JOELSON FELIPE FIRMINO</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
       aria-expanded="false" aria-label="Toggle navigation">
@@ -90,7 +90,7 @@
               <img src="./img/minhafoto.jpg" class="figure-img img-fluid rounded" alt="Uma foto minha bem bonita.">
             </figure>
           </div>
-          <div class="col-2"></div>
+          <div class="col-3"></div>
         </div>
       </div>
     </div>
@@ -101,7 +101,7 @@
   
   <div id="cer" class="jcertificados gradiente container-fluid text-center">
       <br>
-    <h1> CERTIFICADOS</h1>
+    <h1 > CERTIFICADOS</h1>
     <p class="lead">“APRENDER É A ÚNICA COISA DE QUE A MENTE NUNCA SE CANSA, NUNCA TEM MEDO E NUNCA SE ARREPENDE“
      <br> <em>LEONADOR DA VINCI</em>
     </p>
@@ -167,21 +167,20 @@
     <button type="button" class="btn-light btn btn-lg  bio">Ver Todos </button>
   </div>
   <!--PROJETOS-->
-  <div class="jprojetos cima container-fluid">
-    Projetos
-
+  <div class="jprojetos cima container-fluid text-center">
+   <h1> Projetos</h1>
     <button type="button" class="gradiente btn btn-lg btn-primary bio">Mais Projetos </button>
   </div>
   <div class="baixo container-fluid"><br></div>
   <!--CONTATOS-->
-  <div class="container-fluid">
+  <div class="jcontatos container-fluid text-center">
     
-    CONTATOS
+    <h1>CONTATOS</h1>
 
-    <button type="button" class="btn-light btn btn-lg  bio">Contatos </button>
+    <button type="button" class="btn-coffee btn-light btn btn-lg  bio">Contatos </button>
   </div>
   <!--FOOTER-->
-  <div class="cima container-fluid">
+  <div class="jfooter cima container-dark container-fluid ">
     RODAPE
   </div>
 
