--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="row">
         <!--Conteudo Mobile-->
         <div class="d-block d-md-none ">
-          <div class="col-12">
+          <div class="col-12 jfotom">
             <img src="./img/minhafoto.jpg" class="jfoto img-fluid" alt="Uma foto minha bem bonita.">
           </div>
           <div class=" restxt col-12 text-justify">
@@ -75,9 +75,9 @@
       </div>
       <!--Conteudo Desktop-->
       <div class="d-none d-md-block">
-        <div class="row">
-          <div class="col-2"></div>
-          <div class=" col-6    text-justify">
+        <div class="row ">
+          <div class="col-1"></div>
+          <div class=" col-5   text-justify">
             <p> texto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla
               blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla
               blabla blatexto bla blatexto bla blatexto bla
@@ -85,12 +85,12 @@
               bla
             </p>
           </div>
-          <div class="col-2">
+          <div class="col-1"></div>
+          <div class=" col-5 jfotod ">
             <figure class="figure">
               <img src="./img/minhafoto.jpg" class="figure-img img-fluid rounded" alt="Uma foto minha bem bonita.">
             </figure>
           </div>
-          <div class="col-3"></div>
         </div>
       </div>
     </div>
@@ -98,85 +98,87 @@
   </div>
   <div class="baixo container-fluid"><br></div>
   <!--CERTIFICADOS-->
-  
+
   <div id="cer" class="jcertificados gradiente container-fluid text-center">
-      <br>
-    <h1 > CERTIFICADOS</h1>
+    <br>
+    <h1> CERTIFICADOS</h1>
     <p class="lead">“APRENDER É A ÚNICA COISA DE QUE A MENTE NUNCA SE CANSA, NUNCA TEM MEDO E NUNCA SE ARREPENDE“
-     <br> <em>LEONADOR DA VINCI</em>
+      <br> <em>LEONADOR DA VINCI</em>
     </p>
     </section>
     <section class="jcert">
-        <div>
-            <!--HTML-->
-            <a href="https://www.sololearn.com/Certificate/1014-9145968/pdf/" target="_blank">
-              <img alt="Certificado HTML Fundamentals" src="./img/c-html.png">
-              <div class="sombra"> </div>
-            </a>
-          </div>
-          <div>
-            <!--JAVASCRIPT -->
-            <a href="https://www.sololearn.com/Certificate/1024-9145968/pdf/" target="_blank">
-              <img alt="Certificado JavaScript Tutorial" src="./img/c-js.png">
-              <div class="sombra"> </div>
-            </a>
-          </div>
-          <div>
-            <!--PHP -->
-            <a href="https://www.sololearn.com/Certificate/1059-9145968/pdf/" target="_blank">
-              <img alt="Certificado PHP Tutorial" src="./img/c-php.png">
-              <div class="sombra"> </div>
-            </a>
-          </div>
-          <div>
-            <!--CSS -->
-            <a href="https://www.sololearn.com/Certificate/1023-9145968/pdf/" target="_blank">
-              <img alt="Certificado CSS Fundamentals" src="./img/c-css.png">
-              <div class="sombra"> </div>
-            </a>
-          </div>
-          <div>
-            <!--SQL -->
-            <a href="https://www.sololearn.com/Certificate/1060-9145968/pdf/" target="_blank">
-              <img alt="Certificado SQL Fundamentals" src="./img/c-sql.png">
-              <div class="sombra"> </div>
-            </a>
-          </div>
-          <div>
-            <!--RESPONSIVE WEB DESIGN -->
-            <a href="https://www.freecodecamp.org/certification/jff/responsive-web-design" target="_blank">
-              <img alt="Certificado Responsive Web Design" src="./img/c-wdr.png">
-              <div class="sombra"> </div>
-            </a>
-          </div>
-          <div>
-              <!--OFFICE -->
-              <a href="https://www.freecodecamp.org/certification/jff/responsive-web-design" target="_blank">
-                <img alt="Certificado Pacote Office" src="./img/c-office.png">
-                <div class="sombra"> </div>
-              </a>
-            </div>
-            <div>
-                <!--ACCESS -->
-                <a href="https://www.freecodecamp.org/certification/jff/responsive-web-design" target="_blank">
-                  <img alt="Certificado Aperfeiçoamento Profissional Access" src="./img/c-access.png">
-                  <div class="sombra"> </div>
-                </a>
-              </div>
+      <div>
+        <!--HTML-->
+        <a href="https://www.sololearn.com/Certificate/1014-9145968/pdf/" target="_blank">
+          <img alt="Certificado HTML Fundamentals" src="./img/c-html.png">
+
+        </a>
+      </div>
+      <div>
+        <!--JAVASCRIPT -->
+        <a href="https://www.sololearn.com/Certificate/1024-9145968/pdf/" target="_blank">
+          <img alt="Certificado JavaScript Tutorial" src="./img/c-js.png">
+
+        </a>
+      </div>
+      <div>
+        <!--PHP -->
+        <a href="https://www.sololearn.com/Certificate/1059-9145968/pdf/" target="_blank">
+          <img alt="Certificado PHP Tutorial" src="./img/c-php.png">
+
+        </a>
+      </div>
+      <div>
+        <!--CSS -->
+        <a href="https://www.sololearn.com/Certificate/1023-9145968/pdf/" target="_blank">
+          <img alt="Certificado CSS Fundamentals" src="./img/c-css.png">
+
+        </a>
+      </div>
+      <div>
+        <!--SQL -->
+        <a href="https://www.sololearn.com/Certificate/1060-9145968/pdf/" target="_blank">
+          <img alt="Certificado SQL Fundamentals" src="./img/c-sql.png">
+
+        </a>
+      </div>
+      <div>
+        <!--RESPONSIVE WEB DESIGN -->
+        <a href="https://www.freecodecamp.org/certification/jff/responsive-web-design" target="_blank">
+          <img alt="Certificado Responsive Web Design" src="./img/c-wdr.png">
+
+        </a>
+      </div>
+      <div>
+        <!--OFFICE -->
+        <a href="https://www.freecodecamp.org/certification/jff/responsive-web-design" target="_blank">
+          <img alt="Certificado Pacote Office" src="./img/c-office.png">
+
+        </a>
+      </div>
+      <div>
+        <!--ACCESS -->
+        <a href="https://www.freecodecamp.org/certification/jff/responsive-web-design" target="_blank">
+          <img alt="Certificado Aperfeiçoamento Profissional Access" src="./img/c-access.png">
+
+        </a>
+      </div>
     </section><br>
     <button type="button" class="btn-light btn btn-lg  bio">Ver Todos </button>
   </div>
   <!--PROJETOS-->
-  <div class="jprojetos cima container-fluid text-center">
-   <h1> Projetos</h1>
+  <div id="pro" class="jprojetos cima container-fluid text-center">
+    <h1> Projetos</h1>
     <button type="button" class="gradiente btn btn-lg btn-primary bio">Mais Projetos </button>
   </div>
   <div class="baixo container-fluid"><br></div>
   <!--CONTATOS-->
   <div class="jcontatos container-fluid text-center">
-    
-    <h1>CONTATOS</h1>
-
+      <br>
+    <div class="row">
+      <h3 class="monoton">QUE TAL UM CAFÉ?</h3>
+    </div>
+    <div class="row"><br></div>
     <button type="button" class="btn-coffee btn-light btn btn-lg  bio">Contatos </button>
   </div>
   <!--FOOTER-->
