fix navbar position

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
   <!--NAV-->
-  <nav class=" navbar baixo navbar-expand-lg navbar-dark gradiente bg-dark navbar-fixed-top">
+  <nav class=" navbar fixed-top baixo navbar-expand-lg navbar-dark gradiente bg-dark navbar-fixed-top">
     <a class="navbar-brand" href="#">JOELSON FELIPE FIRMINO</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
       aria-expanded="false" aria-label="Toggle navigation">
@@ -26,11 +26,11 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">INICIO <span class="sr-only">(current)</span></a>
+        <li class="nav-item active" >
+          <a class="nav-link"  href="#" >INICIO <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#res">RESUMO</a>
+          <a class="nav-link"  href="#res">RESUMO</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#cer">CERTIFICADOS</a>
@@ -193,4 +193,5 @@
   <script src="./framework/slick/slick.min.js"></script>
   <!-- SCRIPT-->
   <script src="./js/carousel.js"></script>
+  <script src="./js/main.js"></script>
 </body>
