--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
   <!--NAV-->
-  <nav class=" navbar fixed-top baixo navbar-expand-lg navbar-dark gradiente bg-dark navbar-fixed-top">
+  <nav class="navbar d-none d-md-flex baixo navbar-expand-lg navbar-dark gradiente bg-dark">
     <a class="navbar-brand" href="#">JOELSON FELIPE FIRMINO</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
       aria-expanded="false" aria-label="Toggle navigation">
@@ -44,6 +44,40 @@
       </ul>
     </div>
   </nav>
+  <!--NavbarMobile 1-->
+
+  <nav class=" navbar d-block d-md-none static-top cima navbar-expand-lg navbar-dark gradiente bg-dark">
+      <a class="navbar-brand" href="#">JOELSON FELIPE FIRMINO</a>
+  </nav>
+
+  <!--NavbarMobile 2-->
+
+  <nav class=" navbar d-block d-md-none fixed-bottom cima navbar-expand-lg navbar-dark gradiente bg-dark">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav2" aria-controls="navbarNav"
+      aria-expanded="true" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon jnavbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav2">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active" >
+          <a class="nav-link"  href="#" >INICIO <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link"  href="#res">RESUMO</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#cer">CERTIFICADOS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#pro">PROJETOS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#con">CONTATOS</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
   <!--HEADER-->
   <div class="jbg">
     <div class="jheader container-dark container-fluid text-center">
