--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav2">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item active" >
+        <li class="nav-item active"  data-toggle="collapse" data-target="#navbarNav2" >
           <a class="nav-link"  href="#" >INICIO <span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item"  data-toggle="collapse" data-target="#navbarNav2" >
           <a class="nav-link"  href="#res">RESUMO</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" data-toggle="collapse" data-target="#navbarNav2" >
           <a class="nav-link" href="#cer">CERTIFICADOS</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" data-toggle="collapse" data-target="#navbarNav2" >
           <a class="nav-link" href="#pro">PROJETOS</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" data-toggle="collapse" data-target="#navbarNav2" >
           <a class="nav-link" href="#con">CONTATOS</a>
         </li>
       </ul>
@@ -221,11 +221,11 @@
   </div>
 
   <!--FRAMEWORK-->
-  <script src="./framework/jquery/jquery-3.2.1.slim.min.js"></script>
-  <script src="./framework/popper/popper.min.js"></script>
-  <script src="./framework/bootstrap/bootstrap.min.js"></script>
-  <script src="./framework/slick/slick.min.js"></script>
+  <script src="./framework/jquery/jquery-3.2.1.slim.min.js" type="text/javascript"></script>
+  <script src="./framework/popper/popper.min.js" type="text/javascript"></script>
+  <script src="./framework/bootstrap/bootstrap.min.js" type="text/javascript"></script>
+  <script src="./framework/slick/slick.min.js" type="text/javascript"></script>
   <!-- SCRIPT-->
-  <script src="./js/carousel.js"></script>
-  <script src="./js/main.js"></script>
+  <script src="./js/carousel.js" type="text/javascript"></script>
+  <script src="./js/main.js" type="text/javascript"></script>
 </body>
