--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <link rel="stylesheet" href="./framework/bootstrap/bootstrap.min.css">
   <link rel="stylesheet" href="./framework/slick/slick.css" />
   <link rel="stylesheet" href="./framework/slick/slick-theme.css" />
+  <link rel="stylesheet" href="./framework/font-awesome/font-awesome.css">
+
 </head>
 
 <body>
@@ -201,8 +203,19 @@
     <button type="button" class="btn-light btn btn-lg  bio">Ver Todos </button>
   </div>
   <!--PROJETOS-->
-  <div id="pro" class="jprojetos cima container-fluid text-center">
+  <div class="jprojetos carousel cima container-fluid text-center">
     <h1> Projetos</h1>
+    <section class="jproj">
+      <div>
+      <img src="https://via.placeholder.com/500x500?1">
+    </div>
+    <div>
+    <img src="https://via.placeholder.com/500x500?1">
+  </div>
+  <div>
+  <img src="https://via.placeholder.com/500x500?1">
+</div>
+    </section>
     <button type="button" class="gradiente btn btn-lg btn-primary bio">Mais Projetos </button>
   </div>
   <div class="baixo container-fluid"><br></div>
@@ -212,19 +225,13 @@
     <div class="row">
       <h3 class="monoton">QUE TAL UM CAFÉ?</h3>
     </div>
-    <div class="row"><br></div>
-    <button type="button" class="btn-coffee btn-light btn btn-lg  bio">Contatos </button>
-  </div>
-  <!--FOOTER-->
-  <div class="jfooter cima container-dark container-fluid ">
-    RODAPE
-  </div>
-
+  <br><br></div>
   <!--FRAMEWORK-->
   <script src="./framework/jquery/jquery-3.2.1.slim.min.js" type="text/javascript"></script>
   <script src="./framework/popper/popper.min.js" type="text/javascript"></script>
   <script src="./framework/bootstrap/bootstrap.min.js" type="text/javascript"></script>
   <script src="./framework/slick/slick.min.js" type="text/javascript"></script>
+  
   <!-- SCRIPT-->
   <script src="./js/carousel.js" type="text/javascript"></script>
   <script src="./js/main.js" type="text/javascript"></script>
