--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
   <!--NavbarMobile 2-->
 
-  <nav class=" navbar d-none d-md-none fixed-bottom cima navbar-expand-lg navbar-dark gradiente bg-dark">
+  <nav class=" navbar d-block d-md-none fixed-bottom cima navbar-expand-lg navbar-dark gradiente bg-dark">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav2" aria-controls="navbarNav"
       aria-expanded="true" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon jnavbar-toggler-icon"></span>
@@ -234,32 +234,50 @@
     <div class="row">
       <h3 class="monoton">QUE TAL UM CAFÉ?</h3>
     </div>
-    <div class="row">
-      <form>
-        <div class="form-group">
-          <label for="nome"></label>
-          <input id="nome" name="nome" placeholder="Seu Nome" type="text" required="required" class="form-control here">
-        </div>
-        <div class="form-group">
-          <label for="email"></label>
-          <input id="email" name="email" placeholder="Seu@email.com" type="text" required="required" class="form-control here">
-        </div>
-        <div class="form-group">
-          <label for="tel"></label>
-          <input id="tel" name="tel" placeholder="Celular ou Telefone" type="text" required="required" class="form-control here">
-        </div>
-        <div class="form-group">
-          <label for="mensagem"></label>
-          <textarea id="mensagem" name="mensagem" cols="40" rows="5" required="required" class="form-control"></textarea>
-        </div>
-        <br>
-        <div class="form-group">
-          <button name="submit" type="submit" class="btn-light btn btn-lg  bio">ENVIAR</button>
-        </div>
-      </form>
+    <!--RODAPE-->
+    <!--MOBILE-->
+    <div class="row d-block d-md-none">
+
     </div>
-    <br>
+    <!--DESKTOP-->
+        <form>
+          <div class="row">
+
+          <div class="col-xs-12 col-md-6">
+          <div class="form-group">
+            <label for="nome"></label>
+            <input id="nome" name="nome" placeholder="Seu Nome" type="text" required="required" class="form-control here">
+          </div>
+          <div class="form-group">
+            <label for="email"></label>
+            <input id="email" name="email" placeholder="Seu@email.com" type="text" required="required" class="form-control here">
+          </div>
+          <div class="form-group">
+            <label for="tel"></label>
+            <input id="tel" name="tel" placeholder="Celular ou Telefone" type="text" required="required" class="form-control here">
+          </div>
+        </div>
+          <div class="col-xs-12 col-md-6">
+          <div class="form-group">
+            <label for="mensagem"></label>
+            <textarea id="mensagem" name="mensagem" cols="40" rows="5" required="required" class="form-control"></textarea>
+          </div>
+          <br>
+          <div class="form-group">
+            <button name="submit" type="submit" class="btn-light btn btn-lg btn-block bio">ENVIAR</button>
+          </div>
+        </div>
+      </div>
+        </form>
+
   </div>
+    <!--RODAPE-->
+    <div class="row cima">
+        TODOS OS DIREITOS RESERVADO A JOELSON
+
+    </div>
+    <br class=" d-block d-md-none">
+    <br class=" d-block d-md-none">
   <!--FRAMEWORK-->
   <script src="./framework/jquery/jquery-3.2.1.slim.min.js" type="text/javascript"></script>
   <script src="./framework/popper/popper.min.js" type="text/javascript"></script>
