--- a/index.html
+++ b/index.html
@@ -272,9 +272,10 @@
 
   </div>
     <!--RODAPE-->
-    <div class="row cima">
-        TODOS OS DIREITOS RESERVADO A JOELSON
-
+    <div class="row">
+      <div class="col-12 cima">
+          TODOS OS DIREITOS RESERVADO A JOELSON
+        </div>
     </div>
     <br class=" d-block d-md-none">
     <br class=" d-block d-md-none">
