--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
   </div>
     <!--RODAPE-->
     <div class="row">
-      <div class="col-12 cima">
+      <div class="jfooter col-12 cima">
           TODOS OS DIREITOS RESERVADO A JOELSON
         </div>
     </div>
