--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="./framework/bootstrap/bootstrap.min.css">
   <link rel="stylesheet" href="./framework/slick/slick.css" />
   <link rel="stylesheet" href="./framework/slick/slick-theme.css" />
-  <link rel="stylesheet" href="./framework/font-awesome/font-awesome.css">
+  <link rel="stylesheet" href="./framework/font-awesome/css/all.css">
 
 </head>
 
@@ -272,13 +272,16 @@
 
   </div>
     <!--RODAPE-->
+    
+    <div class="jfooter container-fluid col-12 cima">
     <div class="row">
-      <div class="jfooter col-12 cima">
           TODOS OS DIREITOS RESERVADO A JOELSON
         </div>
     </div>
+    <div class="fix-absolute-position">
     <br class=" d-block d-md-none">
     <br class=" d-block d-md-none">
+  </div>
   <!--FRAMEWORK-->
   <script src="./framework/jquery/jquery-3.2.1.slim.min.js" type="text/javascript"></script>
   <script src="./framework/popper/popper.min.js" type="text/javascript"></script>
