--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <!--NAV-->
   <nav class="navbar baixo navbar-expand-lg navbar-dark gradiente bg-dark">
     <a class="navbar-brand" href="#">JOELSON FELIPE FIRMINO</a>
-    <button class="navbar-toggler d-none d-md-flex d-lg-none " type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-      aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler d-none d-md-flex d-lg-none " type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse " id="navbarNav">
@@ -232,7 +232,7 @@
     <!--RODAPE-->
     <form>
       <div class="row">
-          <div class="col-md-1"></div>
+        <div class="col-md-1"></div>
 
         <div class="col-xs-12 col-md-5">
           <div class="form-group">
@@ -259,29 +259,53 @@
           </div>
         </div>
       </div>
-      
+
       <div class="col-md-1"></div>
     </form>
 
   </div>
   <!--RODAPE-->
 
-  <div class="jfooter container-fluid col-12 cima">
-    <div class="row">
-      TODOS OS DIREITOS RESERVADO A JOELSON
-
-
-
-
-    </div>
-
-    
-    <div class="fix-absolute-position">
-        <br class=" d-block d-md-none">
-        <br class=" d-block d-md-none">
+  <div class="jfooter  container-fluid col-12 cima">
+    <div class="row ">
+      <div class="col-12">
+        <h1 class="jnome text-center" href="#">JOELSON FELIPE FIRMINO</h1>
       </div>
+    </div>
+      <div class="col-12 col-md-5">
+        <i class="fas fa-map-marker-alt">
+          <p>Americana - SP</p>
+        </i>
+      </div>
+      <div class="col-12 col-md-5">
+        <i class="fas fa-phone">
+          <p>+55 19 988-506-890</p>
+        </i>
+      </div>
+      <div class="col-12 col-md-5">
+        <i class="fas fa-envelope">
+          <p>joelson.firmino@fatec.sp.gov.br</p>
+        </i>
+      </div>
+    FRASE
+    "Frase faopfja kafopw akop fafkopw ako fwapk owap akop afwká fkkakakkak kf"
+
+    icone facebook
+    icone linkedin
+    icone github
+    icone whatsapp
+
+
+
   </div>
-  
+
+
+  <div class="fix-absolute-position">
+    <br class=" d-block d-md-none">
+    <br class=" d-block d-md-none">
+  </div>
+  </div>
+
   <!--FRAMEWORK-->
   <script src="./framework/jquery/jquery-3.2.1.slim.min.js" type="text/javascript"></script>
   <script src="./framework/popper/popper.min.js" type="text/javascript"></script>
