--- a/index.html
+++ b/index.html
@@ -272,38 +272,37 @@
         <h1 class="jnome text-center" href="#">JOELSON FELIPE FIRMINO</h1>
       </div>
     </div>
-      <div class="col-12 col-md-5">
+    <div class="row">
+      <div class="col-md-1"></div>
+      <div class="jft col-12 col-md-5">
         <i class="fas fa-map-marker-alt">
           <p>Americana - SP</p>
         </i>
-      </div>
-      <div class="col-12 col-md-5">
+        <br>
         <i class="fas fa-phone">
           <p>+55 19 988-506-890</p>
         </i>
-      </div>
-      <div class="col-12 col-md-5">
+        <br>
         <i class="fas fa-envelope">
           <p>joelson.firmino@fatec.sp.gov.br</p>
         </i>
       </div>
-    FRASE
-    "Frase faopfja kafopw akop fafkopw ako fwapk owap akop afwká fkkakakkak kf"
-
-    icone facebook
-    icone linkedin
-    icone github
-    icone whatsapp
-
-
-
+      <div class="jftt col-12 col-md-5">
+    <p>"Frase faopfja kafopw akop fafkopw ako fwapk owap akop afwká fkkakakkak kf"
+      </p>
   </div>
-
-
-  <div class="fix-absolute-position">
-    <br class=" d-block d-md-none">
-    <br class=" d-block d-md-none">
+    <div class="col-md-1"></div>
   </div>
+  <br>
+  <div class="row text-center">
+  <div class="col-12 d-inline-block">
+      icone facebook
+      icone linkedin
+      icone github
+      icone whatsapp
+  </div>
+</div>
+
   </div>
 
   <!--FRAMEWORK-->
